Fix: layout shifting

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -12,7 +12,7 @@
   left: 200px;
 }
 .chat-individual {
-  width: 50%;
+  width: 52%;
 }
 .chat-individual::after {
   content: "";
