--- a/src/components/Chat/IndividualPortrait/IndividualPortrait.css
+++ b/src/components/Chat/IndividualPortrait/IndividualPortrait.css
@@ -1,6 +1,7 @@
 .individual-portrait-inner {
   overflow: hidden;
   position: relative;
+  z-index: 100;
 }
 
 .individual-portrait-img-container {
