--- a/src/components/Chat/MessagesList/MessagesList.css
+++ b/src/components/Chat/MessagesList/MessagesList.css
@@ -1,22 +1,23 @@
-.messages-list {
+.messages {
   padding-top: 1px;
-  align-self: flex-start;
   display: flex;
   flex-direction: column;
-  align-self: flex-end;
+  justify-content: space-between;
   position: relative;
   max-height: 85vh;
-  margin: 0 auto;
+  min-height: 60vh;
 }
 .messages-list::before {
+  z-index: 90;
   content: "";
   position: absolute;
   top: -1px;
   left: 0;
   right: 0;
   height: 20px;
+  margin-top: 40px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0), #0a0806);
-  z-index: 999;
+  
   pointer-events: none;
 }
 
@@ -24,6 +25,7 @@
   display: flex;
   flex-direction: column-reverse;
   max-height: 719px;
+  height: 719px;
   overflow-x: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -86,8 +88,18 @@
   height: 50px;
 }
 @media (max-width: 1640px) {
+  .messages-list::before {
+    margin-top: -1px;
+    top: auto;
+    left: 0;
+    right: 0;
+  }
+  .messages {
+    min-height: 0px;
+    height: 400px;
+  }
   .messages-list-messages {
-    height: 30dvh;
+    height: 100%;
   }
 }
 @media (max-width: 750px) {
